assset problem solved

--- a/app/views/pages/faculty.html.erb
+++ b/app/views/pages/faculty.html.erb
@@ -164,7 +164,7 @@ img.emoji {
 	<h1 class="title-header">Core Faculty</h1>
 	<div class="entry-content clearfix">
 		
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/altug_white.jpg" width = "170" height = "170" alt="" class="wp-image-87"/><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("altug_white.jpg", size: "170")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -188,7 +188,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/hoppner_white.jpg" height="170" width="170" alt="" class="wp-image-88"/></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("hoppner_white.jpg", size: "170")%></figure></div>
 
 
 
@@ -205,7 +205,7 @@ img.emoji {
 <hr>
 <p>   </p>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/khushwa_white.jpg" width="170" height="170"/><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("khushwa_white.jpg", size: "170")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -222,7 +222,7 @@ He received his Ph.D. and M.S. in Marketing from Texas A&M University. Prior to 
 <br>
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/mishra_white.jpg" alt="" width="170" height="170" class="wp-image-101"/></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("mishra_white.jpg", size: "170")%></figure></div>
 
 
 
@@ -255,7 +255,7 @@ He received his Ph.D. and M.S. in Marketing from Texas A&M University. Prior to 
 <br>
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/menon_white.jpg" width = "170" height="170" alt="" class="wp-image-160"/></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("menon_white.jpg", size: "170")%></figure></div>
 
 
 
