--- a/app/views/pages/fmembers.html.erb
+++ b/app/views/pages/fmembers.html.erb
@@ -178,7 +178,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image44.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image44.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -192,7 +192,7 @@ img.emoji {
 
 
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image46.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image46.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -205,7 +205,7 @@ img.emoji {
 <hr>
 
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image43.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image43.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -217,7 +217,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image45.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image45.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -229,7 +229,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image50.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image50.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -241,7 +241,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image47.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image47.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -254,7 +254,7 @@ img.emoji {
 <hr>
 
 <!--
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image48.jpeg" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image48.jpeg", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -267,7 +267,7 @@ img.emoji {
 <hr>
 -->
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image51.png" width="250" height="200" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image51.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -279,7 +279,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image49.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image49.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -293,7 +293,7 @@ img.emoji {
 
 
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image54.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image54.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -305,7 +305,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image53.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image53.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -317,7 +317,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image52.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image52.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -329,7 +329,7 @@ img.emoji {
 
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image55.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image55.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -340,7 +340,7 @@ img.emoji {
 <p>Andrew currently serves as the COO of The Vitamin Shoppe. In this role, he leads operations across e-commerce, information technology, enterprise project management, supply chain, planning and allocation, strategic sourcing and scientific and regulatory affairs. Mr. Laudato was CIO at Brookdale Senior Living. Prior to Brookdale, he spent 16 years as CIO at Pier 1 Imports, where he directed technology transformation across all areas of the business. Mr. Laudato is a past Chair of the National Retail Federation’s CIO Council, and in 2016 he was recognized by the NRF for his outstanding contributions to the retail industry.<br><br></p>
 <hr>
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image56.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image56.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
