--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -166,7 +166,7 @@ img.emoji {
 
 
 <br>	
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/gautham_white.jpg" width="220" height="220" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("gautham_white.jpg", size: "220")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -185,7 +185,7 @@ img.emoji {
 <hr>
 
 	
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/rushabh.jpg" width="220" height="220" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("rushabh.jpg", size: "220")%><figcaption>        </figcaption></figure></div>
 
 
 
@@ -204,7 +204,7 @@ img.emoji {
 <hr>
 
 
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/srikaran.jpeg" width="220" height="220" /></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("srikaran.jpeg", size: "220")%></figure></div>
 
 
 
