--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -9,7 +9,7 @@
 	<link rel="profile" href="http://gmpg.org/xfn/11" />
 	<link rel="pingback" href="https://gmuretailtech.000webhostapp.com/xmlrpc.php" />
 
-	<title>Core Faculty &#8211; Retail Innovation Center</title>
+	<title>Core Faculty</title>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="Retail Innovation Center &raquo; Feed" href="https://gmuretailtech.000webhostapp.com/feed/" />
