trying for glitvh again

--- a/app/views/pages/fmembers.html.erb
+++ b/app/views/pages/fmembers.html.erb
@@ -166,7 +166,7 @@ img.emoji {
 
 
 <br>	
-<div class="wp-block-image"><figure class="alignleft size-large"><img src="/assets/image42-40e442f43ac624695ca85c12a2b0bf3a39ed19a8893e2a0651b91ce24a22374c.png" width="250" height="250" /><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image42.png", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
