srikaran pic changed

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -204,7 +204,7 @@ img.emoji {
 <hr>
 
 
-<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("srikaran.jpeg", size: "220")%></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("srikaran.jpg", size: "220")%></figure></div>
 
 
 
