chenged jpeg to jpg

--- a/app/views/pages/fmembers.html.erb
+++ b/app/views/pages/fmembers.html.erb
@@ -254,7 +254,7 @@ img.emoji {
 <hr>
 
 <!--
-<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image48.jpeg", size: "250")%><figcaption>        </figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignleft size-large"><%=image_tag("image48.jpg", size: "250")%><figcaption>        </figcaption></figure></div>
 
 
 
